# emserver

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
client/: CMakeLists.txt
client/doxy/: doxyfile.in
client/hdr/: client_global.h  dataconverter.h  emserveradapter.h  emserverfacade.h  interop.h  interop_sensors.h  transport_client.h
client/src/: dataconverter.cpp  emserveradapter.cpp  emserverfacade.cpp  interop_sensors.cpp  transport_client.cpp
common/: CMakeLists.txt
common/hdr/: baseprotocol.h  bufferprocessor.h  commonprocessor.h  ispecificprocessor.h  processoremserver.h  tcpsession.h
common/src/: baseprotocol.cpp  bufferprocessor.cpp  commonprocessor.cpp  ioservicewrapper.cpp  processoremserver.cpp  tcpsession.cpp
common/tests/: CMakeLists.txt  test_bufferprocessor.cpp  test_bufferprocessor.h  test_commonprocessor.cpp  test_commonprocessor.h  test_protocol.cpp  test_protocol.h
cserver/: CMakeLists.txt  api_capabilities.h  api_common.h  api_sensors.h  api_server.h  cserver.cpp  cserver.h  cserver_global.h
cserver/doxy/: doxyfile.in
cserver/package/: CMakeLists.txt  cserver.control.in  cserver.nuspec.in  cserver.targets  fillVersion.cmake
examples/: CMakeLists.txt
examples/native_client/: CMakeLists.txt  clientwgt.cpp  clientwgt.h  clientwgt.ui  emserveradapterqt.cpp  emserveradapterqt.h  main.cpp
examples/native_cserver/: CMakeLists.txt  main.cpp
protocol/: CMakeLists.txt
protocol/proto/: capabilities.proto  common.proto  emserver.proto  sensors.proto
server/: CMakeLists.txt
server/hdr/: transport.h
server/src/: transport.cpp
smlog/: CMakeLists.txt
smlog/hdr/: smlog.h
smlog/modules/: FindLog4cpp.cmake
smlog/src/: smlog.cpp
